//玩家数据
syntax = "proto3";
import "PbCom.proto";
package PbPlayer;

//收到每天0点重置数据
message SC_player_resetData
{
	int32 KeepLoginNum = 1;				//连续登录次数
	int32 RegDay = 2;					//注册天数(可做登录天数)
	int32 MCDay = 3;					//剩余月卡天数
	bool IsGetMC = 4;					//月卡今日是否已领取
	int32 LoginDay = 5;					//累计登录天数
	int32 ElementSummonId=6;			//元素召唤ID
}


//收到玩家虚拟物品更新
message SC_player_updateVirtual
{
	int32 VirtualType = 1;	//虚拟物品类型 EItemSubTypeVirtual
	int64 Value = 2;		//值
}

//收到玩家经验发生改变
message SC_player_exp
{
	int32 Level = 1;			//角色等级
	int32 Exp=2;			//当前经验
	int32 AddExp = 3;		//增加经验(提示用)	
}
//保存指引步骤
message CS_save_guide
{
	int32 GuideId = 1;
}
//保存指引小步骤
message CS_save_guideStep
{
	int32 GuideStepId = 1;
}
//请求红点数据
message CS_player_redDot
{
	
}

//收到红点数据
message SC_player_redDot
{
	bool JoinLeague =1; 		//是否显示加入联赛	
	int32 LeagueWarNum =2;		//联赛可攻击次数
}

//请求玩家改名
message CS_player_changeName
{
	string Name = 1;					//新的名字
}

//收到玩家改名
message SC_player_changeName
{
	Enum_changeName_result Result = 1;	//改名结果
	string Name = 2;					//新的名字
	int32 ReNameNum = 3;				//已改名次数
}

//请求玩家修改头像
message CS_player_changeIcon
{
	repeated int32 Icon = 1;			//头像[头像、背景、角标]
}

//收到玩家修改头像
message SC_player_changeIcon
{
	repeated int32 Icon = 1;			//头像[头像、背景、角标]
} 

//请求购买金币
message CS_player_buyGold
{

}

//收到购买金币
message SC_player_buyGold
{
	int32 gold = 1;						//金币增加的数量
}

//收到玩家行动点发生改变
message SC_player_point
{
	int32 ActionPoint = 1;				//副本行动点数
	int32 ArenaPoint = 2;				//竞技行动点数
	int32 BossPoint = 3;				//公会Boss行动点
	int32 NextAddAPTime = 4;			//下次恢复副本行动点时间戳
	int32 NextAddARPTime = 5;			//下次恢复竞技行动点时间戳
	int32 NextAddBPTime = 6;			//下次恢复公会行动点时间戳
}



//请求钻石补齐资源
message CS_player_buyRes
{	
	repeated  PbCom.One_AwardItem Less = 1;					//补齐的资源
}
//收到钻石补齐资源
message SC_player_buyRes
{	
	repeated  PbCom.One_AwardItem Less = 1;					//补齐的资源
}

//请求补满体力
message CS_player_buyEnergy
{
	int32 EnergyType = 1;				//体力类型 0副本 1竞技 2泰坦
	int32 CostType = 2;					//花费类型 0钻石 1道具
}
//收到补满体力
message SC_player_buyEnergy
{
	int32 EnergyType = 1;				//体力类型 0副本 1竞技 2泰坦
	int32 CostType = 2;					//花费类型 0钻石 1道具
	int32 Num = 3;						//被补满的体力值
}

//角色改名结果
enum Enum_changeName_result
{
	CnUnknown = 0;		//未知错误
	CnSucceed = 1;		//成功
	CnSameName = 2;		//角色名已存在
	CnMaxLen = 3;		//角色名字符过长
	CnIllegalChar = 4;	//角色名中有非法字符
}

//保存评分状态
message CS_player_estimate
{

}

//收到新客服推送消息(AIHelp)
message SC_player_newPush
{
	repeated PbCom.One_PushMsg Info = 1;	//推送消息
}


//请求推送礼包
message CS_player_payPackList
{

}

//收到推送礼包
message SC_player_payPackList
{
	repeated One_pack_info Info = 1;	//
}

//一个礼包信息
message One_pack_info
{
	int32 packId = 1;			//礼包Id
	int32 time = 2;		//剩余时间
	int32 num=3;		//次数
}


//收到推送礼包
message SC_player_payOkPack
{
	repeated One_pack_info Info = 1;	//
}


message CS_player_pkAward
{
	repeated int32 pkType=1;			//索引0titan 1联盟战 2联赛	0不发奖励	 1发奖励	
}

message SC_player_pkAward
{
	repeated int32 pkType=1;			//索引0titan 1联盟战 2联赛	  2表示有奖励3表示无奖励
}
